# asciiswarm

./: .env.example  .gitignore  AGENT_PROMPT.md  Dockerfile  JAXBIBLE.md  PROGRESS.md  TODOBESTPRACTICES.md  docker-compose.yml  evaluate_game.py  play.py  play_games.py  play_pygame.py  pyproject.toml  replay_games.py  run_tests.py  start_agent.sh  train_parallel.py
asciiswarm/: __init__.py
bootstrap/: DEVELOPMENT_PLAN.md  STEP1_PROMPT.md  TRAINING_INFRA_PLAN.md
current_tasks/: implement_block_push.txt  implement_dungeon_crawl.txt  implement_ecology_spawning.txt  implement_farming_and_growth.txt  implement_fluid_and_pressure.txt  implement_hunger_clock.txt  implement_ice_sliding.txt  implement_inventory_crafting.txt  implement_mood_and_needs.txt  implement_multi_floor_dungeon.txt  implement_npc_allies.txt  implement_npc_allies_and_orders.txt  implement_pac_collect.txt  implement_trade_and_economy.txt
games/: 01_empty_exit.py  02_dodge.py  03_lock_and_key.py  04_dungeon_crawl.py  05_pac_collect.py  06_ice_sliding.py  07_hunger_clock.py  08_block_push.py  09_inventory_crafting.py  10_farming_and_growth.py  11_multi_floor_dungeon.py  12_npc_allies_and_orders.py  13_ecology_and_spawning.py  14_fluid_and_pressure.py  15_trade_and_economy.py  16_mood_and_needs.py  17_siege_and_defense.py  18_fortress_mode.py
infra/: setup_upstream.sh  sync_to_github.sh
jaxswarm/: curriculum.py  network.py  train.py
tests/: dummy_game.py
weights/: game_01_empty_exit.eqx  game_02_dodge.eqx  game_03_lock_and_key.eqx  game_04_dungeon_crawl.eqx  game_05_pac_man_collect.eqx  (+1 more)
(+121 files in other folders)
