[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asciiswarm"
version = "0.1.0"
description = "Turn-based ASCII game engine as a Gymnasium environment"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "stable-baselines3>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["asciiswarm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
