[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jaxswarm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12]",
    "equinox",
    "optax",
    "chex",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
